translated common part to spanish

--- a/frontend/src/locales/es/translation.json
+++ b/frontend/src/locales/es/translation.json
@@ -1,68 +1,68 @@
 {
   "common": {
-    "menu": "Menu",
-    "contact": "Contact",
+    "menu": "Menú",
+    "contact": "Contacto",
     "followontwitter": "Twitter",
     "forkongithub": "GitHub",
     "blog": "Blog",
-    "logout": "Logout",
-    "language": "Language",
-    "dashboard": "Dashboard",
+    "logout": "Cerrar sesión",
+    "language": "Idioma",
+    "dashboard": "Panel de control",
     "cronjobs": "Cronjobs",
-    "statuspages": "Status Pages",
+    "statuspages": "Pagina de Estado",
     "statistics": "Statistics",
-    "settings": "Settings",
-    "description": "Description",
-    "date": "Date",
-    "event": "Event",
-    "actions": "Actions",
-    "edit": "Edit",
-    "notfound": "Not found",
-    "notfoundMessage": "The requested resource could not be found. Please check your link and try again.",
-    "back": "Back",
-    "details": "Details",
-    "close": "Close",
-    "abort": "Abort",
-    "delete": "Delete",
-    "add": "Add",
-    "save": "Save",
-    "clone": "Clone",
-    "cancel": "Cancel",
-    "create": "Create",
-    "connectivityIssue": "Failed to contact server. Please check your internet connection.",
-    "rateLimitExceeded": "Activity limit exceeded. Please try again later.",
-    "rowsPerPage": "Rows per page:",
-    "rowsFromTo": "{{from}} to {{to}} of {{total}}",
-    "moreThan": "more than {{to}}",
-    "nextPage": "Next page",
-    "previousPage": "Previous page",
-    "checkInput": "Please check your input in this field.",
-    "note": "Note",
+    "settings": "Configuración",
+    "description": "Descripción",
+    "date": "Fecha",
+    "event": "Evento",
+    "actions": "Acciones",
+    "edit": "Editar",
+    "notfound": "No encontrado",
+    "notfoundMessage": "No se pudo encontrar el recurso solicitado. Por favor revisa tu enlace y vuelve a intentarlo.",
+    "back": "Atrás",
+    "details": "Detalles",
+    "close": "Cerrar ",
+    "abort": "Abortar",
+    "delete": "Eliminar",
+    "add": "Añadir",
+    "save": "Guardar",
+    "clone": "Clonar",
+    "cancel": "Cancelar",
+    "create": "Crear",
+    "connectivityIssue": "No se pudo contactar con el servidor. Por favor revise su conexion a internet.",
+    "rateLimitExceeded": "Se superó el límite de actividad. Por favor, inténtelo de nuevo más tarde.",
+    "rowsPerPage": "Filas por página:",
+    "rowsFromTo": "{{from}} a {{to}} de {{total}}",
+    "moreThan": "más de {{to}}",
+    "nextPage": "Siguiente página",
+    "previousPage": "Pagina anterior",
+    "checkInput": "Por favor verifique su entrada en este campo.",
+    "note": "Nota",
     "error": "Error",
-    "success": "Success",
-    "weekDays": [ "Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday" ],
-    "months": [ "January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December" ],
+    "success": "Éxito",
+    "weekDays": [ "Domingo", "Lunes", "Martes", "Miércoles", "Jueves", "Viernes", "Sábado" ],
+    "months": [ "Enero", "Febrero", "Marzo", "Abril", "Mayo", "Junio", "Julio", "Agosto", "Septiembre", "Octubre", "Noviembre", "Diciembre" ],
     "calendarFormat" : {
-      "lastDay" : "[Yesterday at] LTS",
-      "sameDay" : "[Today at] LTS",
-      "nextDay" : "[Tomorrow at] LTS",
-      "lastWeek" : "[last] dddd [at] LTS",
-      "nextWeek" : "dddd [at] LTS",
+      "lastDay" : "[Ayer a las] LTS",
+      "sameDay" : "[Hoy a las] LTS",
+      "nextDay" : "[Mañana a las] LTS",
+      "lastWeek" : "[último] dddd [a las] LTS",
+      "nextWeek" : "dddd [a las] LTS",
       "sameElse" : "L"
     },
-    "quotaIndicator": "Quota: {{cur}} / {{max}}",
-    "selectedItems": "{{count}} item selected",
-    "selectedItems_plural": "{{count}} items selected",
-    "enable": "Enable",
-    "disable": "Disable",
-    "massActionSucceeded": "The action has been executed successfully.",
-    "massActionFailed": "Failed to execute the action. Please try again later.",
-    "sustainingMemberThanks": "You're a Sustaining Member - thanks so much for supporting us and keeping this project alive!",
-    "export": "Export",
-    "confirmMassDeleteTitle": "Delete selected item",
-    "confirmMassDeleteTitle_plural": "Delete {{count}} selected items",
-    "confirmMassDeleteText": "Do you really want to delete the selected item?",
-    "confirmMassDeleteText_plural": "Do you really want to delete the {{count}} selected items?"
+    "quotaIndicator": "Cuota: {{cur}} / {{max}}",
+    "selectedItems": "{{count}} elemento seleccionado",
+    "selectedItems_plural": "{{count}} elementos seleccionados",
+    "enable": "Activar",
+    "disable": "Desactivar",
+    "massActionSucceeded": "La acción se ha ejecutado con éxito.",
+    "massActionFailed": "No se pudo ejecutar la acción. Por favor, inténtelo de nuevo más tarde.",
+    "sustainingMemberThanks": "Eres un miembro sustentador. - ¡Muchas gracias por apoyarnos y mantener vivo este proyecto!",
+    "export": "Exportar",
+    "confirmMassDeleteTitle": "Eliminar elemento seleccionado",
+    "confirmMassDeleteTitle_plural": "Eliminar {{count}} elementos selecionados",
+    "confirmMassDeleteText": "¿Realmente desea eliminar el elemento seleccionado?",
+    "confirmMassDeleteText_plural": "¿Realmente desea eliminar los {{count}} elementos seleccionados?"
   },
   "login": {
     "emailAddress": "Email address",
